feat: add custome return types & ethers support

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@makerdao/multicall",
+  "name": "makerdao-multicall",
   "version": "0.12.0",
   "description": "A blockchain state management library for dapps.",
   "contributors": [
